// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots match error status with statustext 1`] = `
.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c6 ::before,
.c6 ::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0 ::before,
.c0 ::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4 ::before,
.c4 ::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c2 ::before,
.c2 ::after {
  box-sizing: border-box;
}

.c7 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c7::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c7 ::before,
.c7 ::after {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c8 ::before,
.c8 ::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c3 ::before,
.c3 ::after {
  box-sizing: border-box;
}

.c5.fi-label .fi-label_label-span {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0, 0%, 13%);
}

.c5.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c5.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c10 {
  vertical-align: baseline;
}

.c10.fi-icon {
  display: inline-block;
}

.c10 .fi-icon-base-fill {
  fill: currentColor;
}

.c10 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c10.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c10.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c9 {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0, 0%, 13%);
  font-size: 14px;
  line-height: 20px;
}

.c9.fi-status-text {
  display: block;
}

.c9.fi-status-text.fi-status-text--error {
  color: hsl(3, 59%, 43%);
}

.c9.fi-status-text .fi-icon {
  vertical-align: middle;
  transform: translateY(-0.1em);
  margin-right: 5px;
}

.c9.fi-status-text.fi-status-text--success .fi-icon-base-fill {
  fill: hsl(166, 90%, 34%);
}

.c1.fi-file-input {
  color: hsl(0, 0%, 13%);
  width: 100%;
  max-width: 600px;
  line-height: 0;
}

.c1.fi-file-input .fi-label,
.c1.fi-file-input .fi-hint-text,
.c1.fi-file-input .fi-status-text {
  margin: 0;
}

.c1.fi-file-input.fi-file-input--full-width {
  width: 100%;
  max-width: none;
}

.c1.fi-file-input.fi-file-input--full-width .fi-file-input_single-file-container {
  max-width: none;
}

.c1.fi-file-input.fi-file-input--error .fi-file-input_input-outer-wrapper .fi-file-input_drag-area {
  border: 2px dashed hsl(3, 59%, 43%);
}

.c1.fi-file-input.fi-file-input--error .fi-file-input_single-file-container {
  border: 2px dashed hsl(3, 59%, 43%);
}

.c1.fi-file-input .fi-file-input_label--visible {
  margin-bottom: 10px;
}

.c1.fi-file-input .fi-hint-text {
  margin-bottom: 10px;
}

.c1.fi-file-input .fi-file-input_statusText--has-content {
  margin-top: 5px;
}

.c1.fi-file-input .fi-file-input_single-file-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 600px;
  height: 100%;
  background: hsl(0, 0%, 100%);
  padding: 20px;
}

.c1.fi-file-input .fi-file-input_multi-file-container {
  margin-top: 16px;
}

.c1.fi-file-input .fi-file-input_multi-file-container .fi-file-input_file-item-outer-wrapper {
  padding: 5px;
}

.c1.fi-file-input .fi-file-input_multi-file-container .fi-file-input_file-item-outer-wrapper:not(:last-child) {
  border-bottom: 1px solid hsl(202, 7%, 93%);
}

.c1.fi-file-input .fi-file-input_file-item {
  display: flex;
  justify-content: space-between;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info {
  display: flex;
  align-items: center;
  gap: 10px;
  flex-shrink: 1;
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-icon {
  width: 24px;
  height: 24px;
  flex-shrink: 0;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name {
  overflow-wrap: break-word;
  flex-grow: 1;
  flex-shrink: 1;
  font-size: 16px;
  word-break: break-word;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name:not(.is-link):focus {
  position: relative;
  outline: 0;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name:not(.is-link):focus:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-size {
  color: hsl(0, 0%, 42%);
  min-width: 70px;
  margin-right: 10px;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_remove-file-button {
  flex-shrink: 0;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area {
  width: 100%;
  background: hsl(212, 63%, 98%);
  border: 1px dashed hsl(212, 63%, 45%);
  padding: 20px;
  position: relative;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area.highlight {
  background: hsl(212, 63%, 90%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area.fi-file-input_drag-area--has-file {
  border: 1px solid hsl(202, 7%, 93%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper {
  position: relative;
  width: 100%;
  height: 40px;
  display: flex;
  align-items: center;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper.fi-file-input_input-wrapper--hidden {
  visibility: hidden;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_drag-text-container {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  margin-left: 20px;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  z-index: -9999;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element:not(.fi-file-input_label--hidden-under-file):focus +.fi-file-input_input-label {
  position: relative;
  outline: 3px solid transparent;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element:not(.fi-file-input_label--hidden-under-file):focus +.fi-file-input_input-label:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label {
  color: hsl(0, 0%, 13%);
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(212, 63%, 45%);
  background: none;
  background-color: hsl(0, 0%, 100%);
  border: 1px solid hsl(212, 63%, 45%);
  text-shadow: none;
  word-break: normal;
  cursor: pointer;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label:hover {
  background: linear-gradient(-180deg, hsl(202, 7%, 93%) 0%, hsla(0, 0%, 100%, 0) 100%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label:active {
  background: none;
  background-color: hsl(202, 7%, 93%);
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper {
  flex-direction: column-reverse;
  align-items: flex-start;
  height: auto;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_drag-text-container {
  margin-left: 0;
  margin-bottom: 16px;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label {
  width: 100%;
  text-align: center;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item {
  height: 100%;
  flex-direction: column;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item .fi-file-input_file-info {
  margin-bottom: 16px;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-size {
  justify-content: space-between;
  flex-shrink: revert;
  flex-grow: revert;
  margin-right: 0;
}

.c1.fi-file-input .fi-file-input_error-icon {
  color: hsl(3, 59%, 43%);
}

.c1.fi-file-input .fi-file-input_loading-icon {
  animation: rotation 1.5s infinite linear;
}

.c1.fi-file-input .fi-file-input_file-item-error-text {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  color: hsl(3, 59%, 43%);
}

@media (prefers-reduced-motion) {
  .c1.fi-file-input.fi-loadingSpinner.fi-loadingSpinner--loading .fi-loadingSpinner_icon {
    animation: rotation 10s infinite linear;
  }
}

<div
  class="c0 fi-file-input c1 fi-file-input--error"
>
  <fieldset
    class="c2"
  >
    <legend
      class="c3"
    >
      <div
        class="c4 c5 fi-file-input_label--visible fi-label"
      >
        <span
          class="c6 fi-label_label-span"
          id="5-label"
        >
          Resume
        </span>
      </div>
    </legend>
    <div
      class="c0 fi-file-input_input-outer-wrapper"
    >
      <div
        class="c4 fi-file-input_drag-area"
      >
        <div
          class="c0 fi-file-input_input-wrapper"
        >
          <input
            aria-describedby="5-statusText"
            aria-invalid="true"
            class="c7 fi-file-input_input-element"
            data-testid="file-input"
            id="5"
            tabindex="0"
            type="file"
          />
          <label
            class="c8 fi-file-input_input-label"
            for="5"
          >
            Choose file
          </label>
          <div
            class="c0 fi-file-input_drag-text-container"
          >
            Drag and drop files here
          </div>
        </div>
      </div>
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c6 c9 fi-file-input_statusText--has-content fi-status-text fi-status-text--error"
      id="5-statusText"
    >
      <svg
        aria-hidden="true"
        class="fi-icon c10"
        focusable="false"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="fi-icon-base-fill"
          d="M12 0c6.617 0 12 5.383 12 12s-5.383 12-12 12S0 18.617 0 12 5.383 0 12 0Zm.71 17.29c-.38-.37-1.05-.37-1.42 0-.181.19-.29.44-.29.71 0 .26.109.52.29.71.189.18.45.29.71.29.26 0 .52-.11.71-.29.18-.19.29-.45.29-.71 0-.27-.11-.52-.29-.71ZM12 5a1 1 0 0 0-1 1v8a1 1 0 1 0 2 0V6a1 1 0 0 0-1-1Z"
          fill="#222"
          fill-rule="evenodd"
        />
      </svg>
      This is a status text
    </span>
  </fieldset>
</div>
`;

exports[`snapshots match hidden label 1`] = `
.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c6 ::before,
.c6 ::after {
  box-sizing: border-box;
}

.c7 {
  position: absolute;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0 ::before,
.c0 ::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4 ::before,
.c4 ::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c2 ::before,
.c2 ::after {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c8::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c8 ::before,
.c8 ::after {
  box-sizing: border-box;
}

.c9 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c9 ::before,
.c9 ::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c3 ::before,
.c3 ::after {
  box-sizing: border-box;
}

.c5.fi-label .fi-label_label-span {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0, 0%, 13%);
}

.c5.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c5.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c10 {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0, 0%, 13%);
  font-size: 14px;
  line-height: 20px;
}

.c10.fi-status-text {
  display: block;
}

.c10.fi-status-text.fi-status-text--error {
  color: hsl(3, 59%, 43%);
}

.c10.fi-status-text .fi-icon {
  vertical-align: middle;
  transform: translateY(-0.1em);
  margin-right: 5px;
}

.c10.fi-status-text.fi-status-text--success .fi-icon-base-fill {
  fill: hsl(166, 90%, 34%);
}

.c1.fi-file-input {
  color: hsl(0, 0%, 13%);
  width: 100%;
  max-width: 600px;
  line-height: 0;
}

.c1.fi-file-input .fi-label,
.c1.fi-file-input .fi-hint-text,
.c1.fi-file-input .fi-status-text {
  margin: 0;
}

.c1.fi-file-input.fi-file-input--full-width {
  width: 100%;
  max-width: none;
}

.c1.fi-file-input.fi-file-input--full-width .fi-file-input_single-file-container {
  max-width: none;
}

.c1.fi-file-input.fi-file-input--error .fi-file-input_input-outer-wrapper .fi-file-input_drag-area {
  border: 2px dashed hsl(3, 59%, 43%);
}

.c1.fi-file-input.fi-file-input--error .fi-file-input_single-file-container {
  border: 2px dashed hsl(3, 59%, 43%);
}

.c1.fi-file-input .fi-file-input_label--visible {
  margin-bottom: 10px;
}

.c1.fi-file-input .fi-hint-text {
  margin-bottom: 10px;
}

.c1.fi-file-input .fi-file-input_statusText--has-content {
  margin-top: 5px;
}

.c1.fi-file-input .fi-file-input_single-file-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 600px;
  height: 100%;
  background: hsl(0, 0%, 100%);
  padding: 20px;
}

.c1.fi-file-input .fi-file-input_multi-file-container {
  margin-top: 16px;
}

.c1.fi-file-input .fi-file-input_multi-file-container .fi-file-input_file-item-outer-wrapper {
  padding: 5px;
}

.c1.fi-file-input .fi-file-input_multi-file-container .fi-file-input_file-item-outer-wrapper:not(:last-child) {
  border-bottom: 1px solid hsl(202, 7%, 93%);
}

.c1.fi-file-input .fi-file-input_file-item {
  display: flex;
  justify-content: space-between;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info {
  display: flex;
  align-items: center;
  gap: 10px;
  flex-shrink: 1;
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-icon {
  width: 24px;
  height: 24px;
  flex-shrink: 0;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name {
  overflow-wrap: break-word;
  flex-grow: 1;
  flex-shrink: 1;
  font-size: 16px;
  word-break: break-word;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name:not(.is-link):focus {
  position: relative;
  outline: 0;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name:not(.is-link):focus:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-size {
  color: hsl(0, 0%, 42%);
  min-width: 70px;
  margin-right: 10px;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_remove-file-button {
  flex-shrink: 0;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area {
  width: 100%;
  background: hsl(212, 63%, 98%);
  border: 1px dashed hsl(212, 63%, 45%);
  padding: 20px;
  position: relative;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area.highlight {
  background: hsl(212, 63%, 90%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area.fi-file-input_drag-area--has-file {
  border: 1px solid hsl(202, 7%, 93%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper {
  position: relative;
  width: 100%;
  height: 40px;
  display: flex;
  align-items: center;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper.fi-file-input_input-wrapper--hidden {
  visibility: hidden;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_drag-text-container {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  margin-left: 20px;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  z-index: -9999;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element:not(.fi-file-input_label--hidden-under-file):focus +.fi-file-input_input-label {
  position: relative;
  outline: 3px solid transparent;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element:not(.fi-file-input_label--hidden-under-file):focus +.fi-file-input_input-label:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label {
  color: hsl(0, 0%, 13%);
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(212, 63%, 45%);
  background: none;
  background-color: hsl(0, 0%, 100%);
  border: 1px solid hsl(212, 63%, 45%);
  text-shadow: none;
  word-break: normal;
  cursor: pointer;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label:hover {
  background: linear-gradient(-180deg, hsl(202, 7%, 93%) 0%, hsla(0, 0%, 100%, 0) 100%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label:active {
  background: none;
  background-color: hsl(202, 7%, 93%);
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper {
  flex-direction: column-reverse;
  align-items: flex-start;
  height: auto;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_drag-text-container {
  margin-left: 0;
  margin-bottom: 16px;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label {
  width: 100%;
  text-align: center;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item {
  height: 100%;
  flex-direction: column;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item .fi-file-input_file-info {
  margin-bottom: 16px;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-size {
  justify-content: space-between;
  flex-shrink: revert;
  flex-grow: revert;
  margin-right: 0;
}

.c1.fi-file-input .fi-file-input_error-icon {
  color: hsl(3, 59%, 43%);
}

.c1.fi-file-input .fi-file-input_loading-icon {
  animation: rotation 1.5s infinite linear;
}

.c1.fi-file-input .fi-file-input_file-item-error-text {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  color: hsl(3, 59%, 43%);
}

@media (prefers-reduced-motion) {
  .c1.fi-file-input.fi-loadingSpinner.fi-loadingSpinner--loading .fi-loadingSpinner_icon {
    animation: rotation 10s infinite linear;
  }
}

<div
  class="c0 fi-file-input c1"
>
  <fieldset
    class="c2"
  >
    <legend
      class="c3"
    >
      <div
        class="c4 c5 fi-label"
      >
        <span
          class="c6 c7 fi-visually-hidden"
          id="4-label"
        >
          Resume
        </span>
      </div>
    </legend>
    <div
      class="c0 fi-file-input_input-outer-wrapper"
    >
      <div
        class="c4 fi-file-input_drag-area"
      >
        <div
          class="c0 fi-file-input_input-wrapper"
        >
          <input
            aria-invalid="false"
            class="c8 fi-file-input_input-element"
            data-testid="file-input"
            id="4"
            tabindex="0"
            type="file"
          />
          <label
            class="c9 fi-file-input_input-label"
            for="4"
          >
            Choose file
          </label>
          <div
            class="c0 fi-file-input_drag-text-container"
          >
            Drag and drop files here
          </div>
        </div>
      </div>
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c6 c10 fi-status-text"
      id="4-statusText"
    />
  </fieldset>
</div>
`;

exports[`snapshots match hint text 1`] = `
.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c6 ::before,
.c6 ::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0 ::before,
.c0 ::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4 ::before,
.c4 ::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c2 ::before,
.c2 ::after {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c8::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c8 ::before,
.c8 ::after {
  box-sizing: border-box;
}

.c9 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c9 ::before,
.c9 ::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c3 ::before,
.c3 ::after {
  box-sizing: border-box;
}

.c5.fi-label .fi-label_label-span {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0, 0%, 13%);
}

.c5.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c5.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c7 {
  color: hsl(0, 0%, 13%);
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c7.fi-hint-text {
  display: block;
}

.c10 {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0, 0%, 13%);
  font-size: 14px;
  line-height: 20px;
}

.c10.fi-status-text {
  display: block;
}

.c10.fi-status-text.fi-status-text--error {
  color: hsl(3, 59%, 43%);
}

.c10.fi-status-text .fi-icon {
  vertical-align: middle;
  transform: translateY(-0.1em);
  margin-right: 5px;
}

.c10.fi-status-text.fi-status-text--success .fi-icon-base-fill {
  fill: hsl(166, 90%, 34%);
}

.c1.fi-file-input {
  color: hsl(0, 0%, 13%);
  width: 100%;
  max-width: 600px;
  line-height: 0;
}

.c1.fi-file-input .fi-label,
.c1.fi-file-input .fi-hint-text,
.c1.fi-file-input .fi-status-text {
  margin: 0;
}

.c1.fi-file-input.fi-file-input--full-width {
  width: 100%;
  max-width: none;
}

.c1.fi-file-input.fi-file-input--full-width .fi-file-input_single-file-container {
  max-width: none;
}

.c1.fi-file-input.fi-file-input--error .fi-file-input_input-outer-wrapper .fi-file-input_drag-area {
  border: 2px dashed hsl(3, 59%, 43%);
}

.c1.fi-file-input.fi-file-input--error .fi-file-input_single-file-container {
  border: 2px dashed hsl(3, 59%, 43%);
}

.c1.fi-file-input .fi-file-input_label--visible {
  margin-bottom: 10px;
}

.c1.fi-file-input .fi-hint-text {
  margin-bottom: 10px;
}

.c1.fi-file-input .fi-file-input_statusText--has-content {
  margin-top: 5px;
}

.c1.fi-file-input .fi-file-input_single-file-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 600px;
  height: 100%;
  background: hsl(0, 0%, 100%);
  padding: 20px;
}

.c1.fi-file-input .fi-file-input_multi-file-container {
  margin-top: 16px;
}

.c1.fi-file-input .fi-file-input_multi-file-container .fi-file-input_file-item-outer-wrapper {
  padding: 5px;
}

.c1.fi-file-input .fi-file-input_multi-file-container .fi-file-input_file-item-outer-wrapper:not(:last-child) {
  border-bottom: 1px solid hsl(202, 7%, 93%);
}

.c1.fi-file-input .fi-file-input_file-item {
  display: flex;
  justify-content: space-between;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info {
  display: flex;
  align-items: center;
  gap: 10px;
  flex-shrink: 1;
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-icon {
  width: 24px;
  height: 24px;
  flex-shrink: 0;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name {
  overflow-wrap: break-word;
  flex-grow: 1;
  flex-shrink: 1;
  font-size: 16px;
  word-break: break-word;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name:not(.is-link):focus {
  position: relative;
  outline: 0;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name:not(.is-link):focus:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-size {
  color: hsl(0, 0%, 42%);
  min-width: 70px;
  margin-right: 10px;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_remove-file-button {
  flex-shrink: 0;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area {
  width: 100%;
  background: hsl(212, 63%, 98%);
  border: 1px dashed hsl(212, 63%, 45%);
  padding: 20px;
  position: relative;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area.highlight {
  background: hsl(212, 63%, 90%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area.fi-file-input_drag-area--has-file {
  border: 1px solid hsl(202, 7%, 93%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper {
  position: relative;
  width: 100%;
  height: 40px;
  display: flex;
  align-items: center;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper.fi-file-input_input-wrapper--hidden {
  visibility: hidden;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_drag-text-container {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  margin-left: 20px;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  z-index: -9999;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element:not(.fi-file-input_label--hidden-under-file):focus +.fi-file-input_input-label {
  position: relative;
  outline: 3px solid transparent;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element:not(.fi-file-input_label--hidden-under-file):focus +.fi-file-input_input-label:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label {
  color: hsl(0, 0%, 13%);
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(212, 63%, 45%);
  background: none;
  background-color: hsl(0, 0%, 100%);
  border: 1px solid hsl(212, 63%, 45%);
  text-shadow: none;
  word-break: normal;
  cursor: pointer;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label:hover {
  background: linear-gradient(-180deg, hsl(202, 7%, 93%) 0%, hsla(0, 0%, 100%, 0) 100%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label:active {
  background: none;
  background-color: hsl(202, 7%, 93%);
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper {
  flex-direction: column-reverse;
  align-items: flex-start;
  height: auto;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_drag-text-container {
  margin-left: 0;
  margin-bottom: 16px;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label {
  width: 100%;
  text-align: center;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item {
  height: 100%;
  flex-direction: column;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item .fi-file-input_file-info {
  margin-bottom: 16px;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-size {
  justify-content: space-between;
  flex-shrink: revert;
  flex-grow: revert;
  margin-right: 0;
}

.c1.fi-file-input .fi-file-input_error-icon {
  color: hsl(3, 59%, 43%);
}

.c1.fi-file-input .fi-file-input_loading-icon {
  animation: rotation 1.5s infinite linear;
}

.c1.fi-file-input .fi-file-input_file-item-error-text {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  color: hsl(3, 59%, 43%);
}

@media (prefers-reduced-motion) {
  .c1.fi-file-input.fi-loadingSpinner.fi-loadingSpinner--loading .fi-loadingSpinner_icon {
    animation: rotation 10s infinite linear;
  }
}

<body>
  <div>
    <div
      class="c0 fi-file-input c1"
    >
      <fieldset
        class="c2"
      >
        <legend
          class="c3"
        >
          <div
            class="c4 c5 fi-file-input_label--visible fi-label"
          >
            <span
              class="c6 fi-label_label-span"
              id="3-label"
            >
              Resume
            </span>
          </div>
        </legend>
        <span
          class="c6 c7 fi-hint-text"
          id="3-hintText"
        >
          Maximum file size is 1 MB
        </span>
        <div
          class="c0 fi-file-input_input-outer-wrapper"
        >
          <div
            class="c4 fi-file-input_drag-area"
          >
            <div
              class="c0 fi-file-input_input-wrapper"
            >
              <input
                aria-describedby="3-hintText"
                aria-invalid="false"
                class="c8 fi-file-input_input-element"
                data-testid="file-input"
                id="3"
                tabindex="0"
                type="file"
              />
              <label
                class="c9 fi-file-input_input-label"
                for="3"
              >
                Choose file
              </label>
              <div
                class="c0 fi-file-input_drag-text-container"
              >
                Drag and drop files here
              </div>
            </div>
          </div>
        </div>
        <span
          aria-atomic="true"
          aria-live="assertive"
          class="c6 c10 fi-status-text"
          id="3-statusText"
        />
      </fieldset>
    </div>
  </div>
</body>
`;

exports[`snapshots match minimal implementation 1`] = `
.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c6 ::before,
.c6 ::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0 ::before,
.c0 ::after {
  box-sizing: border-box;
}

.c4 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c4 ::before,
.c4 ::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c2 ::before,
.c2 ::after {
  box-sizing: border-box;
}

.c7 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c7::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c7 ::before,
.c7 ::after {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c8 ::before,
.c8 ::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  max-width: 100%;
}

.c3 ::before,
.c3 ::after {
  box-sizing: border-box;
}

.c5.fi-label .fi-label_label-span {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0, 0%, 13%);
}

.c5.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c5.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c9 {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0, 0%, 13%);
  font-size: 14px;
  line-height: 20px;
}

.c9.fi-status-text {
  display: block;
}

.c9.fi-status-text.fi-status-text--error {
  color: hsl(3, 59%, 43%);
}

.c9.fi-status-text .fi-icon {
  vertical-align: middle;
  transform: translateY(-0.1em);
  margin-right: 5px;
}

.c9.fi-status-text.fi-status-text--success .fi-icon-base-fill {
  fill: hsl(166, 90%, 34%);
}

.c1.fi-file-input {
  color: hsl(0, 0%, 13%);
  width: 100%;
  max-width: 600px;
  line-height: 0;
}

.c1.fi-file-input .fi-label,
.c1.fi-file-input .fi-hint-text,
.c1.fi-file-input .fi-status-text {
  margin: 0;
}

.c1.fi-file-input.fi-file-input--full-width {
  width: 100%;
  max-width: none;
}

.c1.fi-file-input.fi-file-input--full-width .fi-file-input_single-file-container {
  max-width: none;
}

.c1.fi-file-input.fi-file-input--error .fi-file-input_input-outer-wrapper .fi-file-input_drag-area {
  border: 2px dashed hsl(3, 59%, 43%);
}

.c1.fi-file-input.fi-file-input--error .fi-file-input_single-file-container {
  border: 2px dashed hsl(3, 59%, 43%);
}

.c1.fi-file-input .fi-file-input_label--visible {
  margin-bottom: 10px;
}

.c1.fi-file-input .fi-hint-text {
  margin-bottom: 10px;
}

.c1.fi-file-input .fi-file-input_statusText--has-content {
  margin-top: 5px;
}

.c1.fi-file-input .fi-file-input_single-file-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 600px;
  height: 100%;
  background: hsl(0, 0%, 100%);
  padding: 20px;
}

.c1.fi-file-input .fi-file-input_multi-file-container {
  margin-top: 16px;
}

.c1.fi-file-input .fi-file-input_multi-file-container .fi-file-input_file-item-outer-wrapper {
  padding: 5px;
}

.c1.fi-file-input .fi-file-input_multi-file-container .fi-file-input_file-item-outer-wrapper:not(:last-child) {
  border-bottom: 1px solid hsl(202, 7%, 93%);
}

.c1.fi-file-input .fi-file-input_file-item {
  display: flex;
  justify-content: space-between;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info {
  display: flex;
  align-items: center;
  gap: 10px;
  flex-shrink: 1;
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-icon {
  width: 24px;
  height: 24px;
  flex-shrink: 0;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name {
  overflow-wrap: break-word;
  flex-grow: 1;
  flex-shrink: 1;
  font-size: 16px;
  word-break: break-word;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name:not(.is-link):focus {
  position: relative;
  outline: 0;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-name:not(.is-link):focus:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-size {
  color: hsl(0, 0%, 42%);
  min-width: 70px;
  margin-right: 10px;
}

.c1.fi-file-input .fi-file-input_file-item .fi-file-input_remove-file-button {
  flex-shrink: 0;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area {
  width: 100%;
  background: hsl(212, 63%, 98%);
  border: 1px dashed hsl(212, 63%, 45%);
  padding: 20px;
  position: relative;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area.highlight {
  background: hsl(212, 63%, 90%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area.fi-file-input_drag-area--has-file {
  border: 1px solid hsl(202, 7%, 93%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper {
  position: relative;
  width: 100%;
  height: 40px;
  display: flex;
  align-items: center;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper.fi-file-input_input-wrapper--hidden {
  visibility: hidden;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_drag-text-container {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  margin-left: 20px;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  z-index: -9999;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element:not(.fi-file-input_label--hidden-under-file):focus +.fi-file-input_input-label {
  position: relative;
  outline: 3px solid transparent;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-element:not(.fi-file-input_label--hidden-under-file):focus +.fi-file-input_input-label:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label {
  color: hsl(0, 0%, 13%);
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  padding: 9px 20px;
  min-height: 40px;
  color: hsl(212, 63%, 45%);
  background: none;
  background-color: hsl(0, 0%, 100%);
  border: 1px solid hsl(212, 63%, 45%);
  text-shadow: none;
  word-break: normal;
  cursor: pointer;
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label:hover {
  background: linear-gradient(-180deg, hsl(202, 7%, 93%) 0%, hsla(0, 0%, 100%, 0) 100%);
}

.c1.fi-file-input .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label:active {
  background: none;
  background-color: hsl(202, 7%, 93%);
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper {
  flex-direction: column-reverse;
  align-items: flex-start;
  height: auto;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_drag-text-container {
  margin-left: 0;
  margin-bottom: 16px;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_input-outer-wrapper .fi-file-input_drag-area .fi-file-input_input-wrapper .fi-file-input_input-label {
  width: 100%;
  text-align: center;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item {
  height: 100%;
  flex-direction: column;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item .fi-file-input_file-info {
  margin-bottom: 16px;
}

.c1.fi-file-input.fi-file-input--small-screen .fi-file-input_single-file-container .fi-file-input_file-item .fi-file-input_file-info .fi-file-input_file-size {
  justify-content: space-between;
  flex-shrink: revert;
  flex-grow: revert;
  margin-right: 0;
}

.c1.fi-file-input .fi-file-input_error-icon {
  color: hsl(3, 59%, 43%);
}

.c1.fi-file-input .fi-file-input_loading-icon {
  animation: rotation 1.5s infinite linear;
}

.c1.fi-file-input .fi-file-input_file-item-error-text {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  font-size: 14px;
  color: hsl(3, 59%, 43%);
}

@media (prefers-reduced-motion) {
  .c1.fi-file-input.fi-loadingSpinner.fi-loadingSpinner--loading .fi-loadingSpinner_icon {
    animation: rotation 10s infinite linear;
  }
}

<div
  class="c0 fi-file-input c1"
>
  <fieldset
    class="c2"
  >
    <legend
      class="c3"
    >
      <div
        class="c4 c5 fi-file-input_label--visible fi-label"
      >
        <span
          class="c6 fi-label_label-span"
          id="1-label"
        >
          Resume
        </span>
      </div>
    </legend>
    <div
      class="c0 fi-file-input_input-outer-wrapper"
    >
      <div
        class="c4 fi-file-input_drag-area"
      >
        <div
          class="c0 fi-file-input_input-wrapper"
        >
          <input
            aria-invalid="false"
            class="c7 fi-file-input_input-element"
            data-testid="file-input"
            id="1"
            tabindex="0"
            type="file"
          />
          <label
            class="c8 fi-file-input_input-label"
            for="1"
          >
            Choose file
          </label>
          <div
            class="c0 fi-file-input_drag-text-container"
          >
            Drag and drop files here
          </div>
        </div>
      </div>
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c6 c9 fi-status-text"
      id="1-statusText"
    />
  </fieldset>
</div>
`;
